add new function for IFTTT
